Modify access rules

--- a/project.config
+++ b/project.config
@@ -12,6 +12,7 @@
 	rebase = group user/Rudolf J Streif (pragma1ce)
 	removeReviewer = group user/Rudolf J Streif (pragma1ce)
 	submit = group user/Rudolf J Streif (pragma1ce)
+	submit = group user/aeichepdx
 [access "refs/heads/*"]
 	read = group user/Rudolf J Streif (pragma1ce)
 	create = group user/Rudolf J Streif (pragma1ce)
