Modify access rules

--- a/project.config
+++ b/project.config
@@ -26,12 +26,12 @@
 	create = group user/Rudolf J Streif (pragma1ce)
 	create = group user/aeichepdx
 	push = +force group user/Rudolf J Streif (pragma1ce)
-	push = group user/aeichepdx
+	push = +force group user/aeichepdx
 	pushMerge = group user/Rudolf J Streif (pragma1ce)
 	pushMerge = group user/aeichepdx
 [access "refs/tags/*"]
 	push = +force group user/Rudolf J Streif (pragma1ce)
-	push = group user/aeichepdx
+	push = +force group user/aeichepdx
 	pushTag = group user/Rudolf J Streif (pragma1ce)
 	pushTag = group user/aeichepdx
 	pushSignedTag = group user/Rudolf J Streif (pragma1ce)
