Modify access rules

--- a/project.config
+++ b/project.config
@@ -3,6 +3,7 @@
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
+	owner = group pdxostc-management
 	owner = group user/Rudolf J Streif (pragma1ce)
 	owner = group user/aeichepdx
 [access "refs/for/refs/*"]
