Update group names

--- a/project.config
+++ b/project.config
@@ -4,36 +4,36 @@
 	inheritFrom = All-Projects
 [access "refs/*"]
 	owner = group pdxostc-management
+	owner = group user/Aaron Eiche (aeichepdx)
 	owner = group user/Rudolf J Streif (pragma1ce)
-	owner = group user/aeichepdx
 [access "refs/for/refs/*"]
+	read = group user/Aaron Eiche (aeichepdx)
 	read = group user/Rudolf J Streif (pragma1ce)
-	read = group user/aeichepdx
+	push = group user/Aaron Eiche (aeichepdx)
 	push = group user/Rudolf J Streif (pragma1ce)
-	push = group user/aeichepdx
+	label-Code-Review = -2..+2 group user/Aaron Eiche (aeichepdx)
 	label-Code-Review = -2..+2 group user/Rudolf J Streif (pragma1ce)
-	label-Code-Review = -2..+2 group user/aeichepdx
+	label-Verified = -1..+1 group user/Aaron Eiche (aeichepdx)
 	label-Verified = -1..+1 group user/Rudolf J Streif (pragma1ce)
-	label-Verified = -1..+1 group user/aeichepdx
+	rebase = group user/Aaron Eiche (aeichepdx)
 	rebase = group user/Rudolf J Streif (pragma1ce)
-	rebase = group user/aeichepdx
+	removeReviewer = group user/Aaron Eiche (aeichepdx)
 	removeReviewer = group user/Rudolf J Streif (pragma1ce)
-	removeReviewer = group user/aeichepdx
+	submit = group user/Aaron Eiche (aeichepdx)
 	submit = group user/Rudolf J Streif (pragma1ce)
-	submit = group user/aeichepdx
 [access "refs/heads/*"]
+	read = group user/Aaron Eiche (aeichepdx)
 	read = group user/Rudolf J Streif (pragma1ce)
-	read = group user/aeichepdx
+	create = group user/Aaron Eiche (aeichepdx)
 	create = group user/Rudolf J Streif (pragma1ce)
-	create = group user/aeichepdx
+	push = +force group user/Aaron Eiche (aeichepdx)
 	push = +force group user/Rudolf J Streif (pragma1ce)
-	push = +force group user/aeichepdx
+	pushMerge = group user/Aaron Eiche (aeichepdx)
 	pushMerge = group user/Rudolf J Streif (pragma1ce)
-	pushMerge = group user/aeichepdx
 [access "refs/tags/*"]
+	push = +force group user/Aaron Eiche (aeichepdx)
 	push = +force group user/Rudolf J Streif (pragma1ce)
-	push = +force group user/aeichepdx
+	pushTag = group user/Aaron Eiche (aeichepdx)
 	pushTag = group user/Rudolf J Streif (pragma1ce)
-	pushTag = group user/aeichepdx
+	pushSignedTag = group user/Aaron Eiche (aeichepdx)
 	pushSignedTag = group user/Rudolf J Streif (pragma1ce)
-	pushSignedTag = group user/aeichepdx
